force-app/main/default/objects/SCOC__SCOCInteraction__c/SCOC__SCOCInteraction__c.object-meta.xml
<CustomObject>
    <description>Interaction object for tracking SCOC processes and messages</description>
    <label>SCOCInteraction</label>
    <nameField>
        <displayFormat>SCOCInteraction-{00000}</displayFormat>
        <label>SCOCInteraction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCOCInteractions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>