force-app/main/default/objects/SCOC__SCOCInteraction__c/fields/SCOC__ContextId__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ContextId__c</fullName>
    <description>This system generated field contains the identifier of the object related to this transaction. By default, it is blank.</description>
    <label>Context ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>