force-app/main/default/objects/SCOC__SCOCInteraction__c/fields/SCOC__CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CorrelationId__c</fullName>
    <description>The System automatically populates this optional text field to reference the tranasction correlation ID. By default, it is blank.</description>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>