force-app/main/default/objects/SCOC__SCOCInteraction__c/fields/SCOC__IsSuccessful__c.field-meta.xml
<CustomField>
    <fullName>SCOC__IsSuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The System automatically populates this optional Boolean field to indicate the success state of the integration. By default, it is blank.</description>
    <label>Is Successful</label>
    <type>Checkbox</type>
</CustomField>