force-app/main/default/objects/SCOC__SCOCInteraction__c/fields/SCOC__LogEId__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LogEId__c</fullName>
    <description>This system populated field contains the external ID of the nFUSE Transaction Log record that is used for final status updates driving the UX. By default, it is blank.</description>
    <externalId>true</externalId>
    <label>Transaction Log External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>