force-app/main/default/objects/SCOC__SCOCInteraction__c/fields/SCOC__Message__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Message__c</fullName>
    <description>The System automatically populates this optional text field with the most recent relevant integration message (such as errors or last recorded success state). By default, it is blank.</description>
    <label>Message</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>