force-app/main/default/objects/SCOC__SCOCInteraction__c/fields/SCOC__nCinoAllowReprocessing__c.field-meta.xml
<CustomField>
    <fullName>SCOC__nCinoAllowReprocessing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The System automatically populates this optional boolean field to indicate whether or not the transaction is available for preprocessing. By default, it is blank.</description>
    <label>nCino Allow Reprocessing</label>
    <type>Checkbox</type>
</CustomField>