force-app/main/default/objects/SCOC__SCOCInteraction__c/fields/SCOC__nCinoProcessingPackage__c.field-meta.xml
<CustomField>
    <fullName>SCOC__nCinoProcessingPackage__c</fullName>
    <description>The System automically populates this optional text field to indicate the integration&apos;s processing package version. By default, it is blank.</description>
    <label>nCino Processing Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>