force-app/main/default/objects/SCOC__SCOCInteraction__c/fields/SCOC__nCinoProcessingVersion__c.field-meta.xml
<CustomField>
    <fullName>SCOC__nCinoProcessingVersion__c</fullName>
    <description>The System automatically populates this optional text field to indicate the package version that the integration leverages. By default, it is blank.</description>
    <label>nCino Processing Version</label>
    <length>11</length>
    <type>Text</type>
</CustomField>