force-app/main/default/objects/SCOC__SCOCInteraction__c/fields/SCOC__VendorProvider__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VendorProvider__c</fullName>
    <description>The System automatically populates this optional text field with the fully-qualified class name of the leveraged provider. By default, it is blank.</description>
    <label>Vendor Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>